# crawler

./: .gitignore  DVsCode.gitignore  auto_sync.py  neutralize_git.py  secure_projects.py  sync_now.bat  upload_to_github.py
DraftClone/: README.md  TempEditorApp.txt  add_zoom.py  apply_zoom.py  neuroapi.html  package-lock.json  patch_editorapp.py  react310.html  requirements.txt  response.html  tmp_script.py  worker.py
telegram-bot-crawler/: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  import_excel_tnved.py  import_tnved.py  pyproject.toml  rates.yaml  scrape_alta.py
telegram-bot-crawler/.github/workflows/: ci.yml
telegram-bot-crawler/app/: bot.py  config.py  main.py  texts.py
telegram-bot-crawler/app/admin/: commands.py
telegram-bot-crawler/app/database/: seed_data.json
telegram-bot-crawler/app/domain/: calculator.py  rates.py  rates_provider.py  search.py  validation.py
telegram-bot-crawler/app/exporters/: session_export.py
telegram-bot-crawler/app/flow/: detectors.py  engine.py  loader.py  signatures.py
telegram-bot-crawler/app/scripts/: import_certification.py
telegram-bot-crawler/app/storage/: db.py  models.py  repo.py
telegram-bot-crawler/docs/: TNVED_IMPORT.md
telegram-bot-crawler/input/: bot_map.json
telegram-bot-crawler/tests/: conftest.py  test_analyze.py  test_buttons.py  test_calculator.py  test_crawler_logic.py  test_engine_transitions.py  test_exporters.py  test_flow_loader.py  test_models.py  test_normalization.py  test_openrouter_parse.py  test_operator_agent.py  test_storage_golden.py  test_validation.py
(+1043 files in other folders)
