[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cn-import-clone"
version = "0.1.0"
description = "Telegram bot clone for cn_import_bot based on crawler artifacts"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.4,<4",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.3.0", "mypy>=1.7"]
postgres = ["psycopg[binary]>=3.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
